[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "misezan_py"
version = "0.0.1"
authors = [
  { name="BonyChops", email="contact@bonychops.com" },
]
description = "Pythonの見せ算計算パッケージ"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/BonyChops/misezan"
Issues = "https://github.com/BonyChops/misezan/issues"